--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/functions.php"
+        ]
     },
     "config": {
         "optimize-autoloader": true
