--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,25 @@
 {
-    "require": {
-        "ext-pdo": "*",
-        "vlucas/phpdotenv": "^5.3"
+  "require": {
+    "ext-pdo": "*",
+    "vlucas/phpdotenv": "^5.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app/"
     },
-    "autoload": {
-        "psr-4": {
-            "App\\": "app/"
-        },
-        "files": [
-            "app/functions.php"
-        ]
-    },
-    "config": {
-        "optimize-autoloader": true
+    "files": [
+      "app/functions.php"
+    ]
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
     }
+  },
+  "config": {
+    "optimize-autoloader": true
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^12"
+  }
 }
